# otus-cpp-professional-hw09-async-command-processing

./: CMakeLists.txt  README.md  TASK.md  prj
.github/workflows/: release.yml
cmake/: build_type_config.cmake  compiler_standard.cmake  options_config.cmake  post_build.cmake  summary_config.cmake  target_config.cmake  warnings_config.cmake
docker/: Dockerfile
doxygen/: .gitignore  Doxyfile  doc_generation.sh  groups.dox  mainpage.dox  namespaces.dox
scripts/: build.sh  clang_tidy.sh  clean.sh  cov.sh  cppcheck.sh  ensure_docker.sh  ensure_image.sh  project.sh  reset_colima.sh  run.sh  test.sh
scripts/lib/: config.sh  docker.sh  logging.sh
src/: app.cpp  app.h  bulk_format.cpp  bulk_format.h  bulk_processor.cpp  bulk_writer.cpp  cli_args.h  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.h
src/async/: CMakeLists.txt  async.cpp  async.h  async_context.cpp  async_context.h  async_internal.h  async_runtime.cpp  async_runtime.h  blocking_queue.h
src/cli/: cli_args.cpp
src/core/: CMakeLists.txt  bulk_processor.h  command_block.h
src/core/io/: bulk_writer.cpp  bulk_writer.h  command_reader.h
src/core/utils/: debug_log.h
src/io/: bulk_writer.h  command_reader.cpp
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/cmake/: add_test.cmake
tests/coverage/: CMakeLists.txt  run_coverage.sh.in
tests/unit/: app_test.cpp  async_context_test.cpp  async_test.cpp  blocking_queue_test.cpp  bulk_format_test.cpp  bulk_processor_test.cpp  bulk_writer_test.cpp  cli_args_test.cpp  command_reader_test.cpp  empty_test.cpp  self_check.sh
