cmake_minimum_required(VERSION 3.12)

if(1) # PROJECT CONFIG BLOCK

    set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")

    project(bulk VERSION 0.0.${PATCH_VERSION})

    # === Путь для модулей CMake ===
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
    # === Путь до исходников ===
    set(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
    # Корень покрываемых исходников
    set(COVERAGE_BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

    set(PROJECT_INCLUDE_DIR
        ${SRC_DIR}
        ${SRC_DIR}/app
        ${SRC_DIR}/async
        ${SRC_DIR}/cli
        ${SRC_DIR}/core
        ${SRC_DIR}/format
        ${SRC_DIR}/io
        ${SRC_DIR}/utils
    )

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

    include(compiler_standard)
    include(warnings_config)
    include(build_type_config)
    include(options_config)

endif()

if(1) # CORE LIBRARY BLOCK
    set(CORE_NAME ${PROJECT_NAME}_CORE)

    set(CORE_SRC ${CORE_NAME}_SRC)

    set(${CORE_SRC}
        ${SRC_DIR}/app/app.cpp
        ${SRC_DIR}/async/async.cpp
        ${SRC_DIR}/async/async_context.cpp
        ${SRC_DIR}/format/bulk_format.cpp
        ${SRC_DIR}/core/bulk_processor.cpp
        ${SRC_DIR}/io/bulk_writer.cpp
        ${SRC_DIR}/cli/cli_args.cpp
        ${SRC_DIR}/io/command_reader.cpp
    )

    set(COVERAGE_SRC
        ${SRC_DIR}/app/app.cpp
        ${SRC_DIR}/async/async.cpp
        ${SRC_DIR}/async/async_context.cpp
        ${SRC_DIR}/format/bulk_format.cpp
        ${SRC_DIR}/core/bulk_processor.cpp
        ${SRC_DIR}/io/bulk_writer.cpp
        ${SRC_DIR}/cli/cli_args.cpp
        ${SRC_DIR}/io/command_reader.cpp
    )

    if(${CORE_SRC})
        add_library(${CORE_NAME} ${${CORE_SRC}})

        target_include_directories(${CORE_NAME} PUBLIC
            ${PROJECT_INCLUDE_DIR}
        )

        target_compile_options(${CORE_NAME} PRIVATE ${WARN_FLAGS})

        if(BUILD_COVERAGE)
            target_compile_options(${CORE_NAME} PRIVATE ${COVERAGE_COMPILE_FLAGS})
        endif()

        if(ENABLE_DEBUG_LOG)
            target_compile_definitions(${CORE_NAME} PRIVATE ENABLE_DEBUG_LOG)
        endif()
    else()
        add_library(${CORE_NAME} INTERFACE)

        target_include_directories(${CORE_NAME} INTERFACE
            ${PROJECT_INCLUDE_DIR}
        )

        if(ENABLE_DEBUG_LOG)
            target_compile_definitions(${CORE_NAME} INTERFACE ENABLE_DEBUG_LOG)
        endif()
    endif()
endif()

if(1) # MAIN APPLICATION BLOCK
    add_executable(${PROJECT_NAME}
        ${SRC_DIR}/app/main.cpp
    )

    target_link_libraries(${PROJECT_NAME} PRIVATE ${CORE_NAME})

    target_compile_options(${PROJECT_NAME} PRIVATE ${WARN_FLAGS})

    if(ENABLE_DEBUG_LOG)
        target_compile_definitions(${PROJECT_NAME} PRIVATE ENABLE_DEBUG_LOG)
    endif()

    list(APPEND COVERAGE_SRC ${SRC_DIR}/app/main.cpp)

    if (BUILD_COVERAGE)
        target_compile_options(${PROJECT_NAME} PRIVATE ${COVERAGE_COMPILE_FLAGS})
        if (CMAKE_VERSION VERSION_GREATER "3.13" OR
            CMAKE_VERSION VERSION_EQUAL "3.13")
            target_link_options(${PROJECT_NAME} PRIVATE ${COVERAGE_LINK_FLAGS})
        else()
            set_target_properties(${PROJECT_NAME} PROPERTIES
                LINK_FLAGS "${COVERAGE_LINK_FLAGS}"
            )
        endif()
    endif()
endif()

if(1) # PROJECT METADATA BLOCK
    # Генерация файла с именем бинарного файла (нужно будет для скриптов)
    file(GENERATE
        OUTPUT "${CMAKE_BINARY_DIR}/project_binary_name.txt"
        CONTENT "${PROJECT_NAME}\n"
    )
endif()

if(1) # ACTIVATE BUILD TESTS BLOCK
    if (BUILD_TESTING)
        enable_testing()
        add_subdirectory(tests)
    endif()
endif()

if(1) # CPACK BLOCK
    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)

    set(CPACK_GENERATOR DEB)

    set(CPACK_PACKAGE_NAME ${PROJECT_NAME})

    set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
    set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
    set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

    set(CPACK_PACKAGE_CONTACT "d.v.bogomaz@gmail.com")

    include(CPack)
endif()

include(summary_config)
#include(post_build)
